--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     image: crawlab-local:1.0.2
     container_name: master
     privileged: true
+    cap_add:
+      - SYS_ADMIN
     environment:
       # CRAWLAB_API_ADDRESS: "https://<your_api_ip>:<your_api_port>"  # backend API address 后端 API 地址. 适用于 https 或者源码部署
       CRAWLAB_SERVER_MASTER: "Y"  # whether to be master node 是否为主节点，主节点为 Y，工作节点为 N
@@ -49,6 +51,8 @@ services:
     image: crawlab-local:1.0.2
     container_name: worker
     privileged: true
+    cap_add:
+      - SYS_ADMIN
     environment:
       CRAWLAB_SERVER_MASTER: "N"
       CRAWLAB_MONGO_HOST: "mongo"
