--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -32,8 +32,7 @@ ENV CRAWLAB_IS_DOCKER Y
 ENV container=docker
 
 # install packages
-RUN chmod 777 /tmp \
-	&& yum makecache \
+RUN yum makecache \
 	&& yum install -y epel-release \
 	&& yum install -y curl git net-tools iputils-ping ntp ntpdate python3 python3-pip wget \
 	&& yum clean all \
