--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -32,7 +32,8 @@ ENV CRAWLAB_IS_DOCKER Y
 ENV container=docker
 
 # install packages
-RUN yum makecache \
+RUN chmod 777 /tmp \
+	&& yum makecache \
 	&& yum install -y epel-release \
 	&& yum install -y curl git net-tools iputils-ping ntp ntpdate python3 python3-pip wget \
 	&& yum clean all \
