--- a/backend/conf/config.yml
+++ b/backend/conf/config.yml
@@ -43,7 +43,7 @@ setting:
   allowRegister: "N"
   enableTutorial: "N"
   runOnMaster: "Y"
-  demoSpiders: "N"
+  demoSpiders: "Y"
   checkScrapy: "Y"
   autoInstall: "Y"
 notification:
